<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tan_background"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/introduction"
            style="@style/IntroductionStyle"
            android:text="@string/introduction"
            android:autoLink="web"
            android:linksClickable="true"/>
        <!-- Numbers category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_numbers">
            <TextView
                android:id="@+id/numbers"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_numbers" />
        </FrameLayout>

        <!-- Body category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_body">
            <TextView
                android:id="@+id/body"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_body" />
        </FrameLayout>

        <!-- People category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_people">
            <TextView
                android:id="@+id/people"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_people" />
        </FrameLayout>

        <!-- Nature category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_nature">
            <TextView
                android:id="@+id/nature"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_nature" />
        </FrameLayout>

        <!-- Verbs category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_verbs">
            <TextView
                android:id="@+id/verbs"
                style="@style/CategoryStyle"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/category_verbs" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>